--- a/20230930_ogawa/20230930_ogawa.css
+++ b/20230930_ogawa/20230930_ogawa.css
@@ -1,5 +1,14 @@
-h1.title{
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.title{
+    font-size: 20px;
+    font-weight: bold;
     float: left;
+    margin: 15px 20px;
     color: #000080;
 }
 
@@ -59,11 +68,13 @@ a {
 
 .main_left_line{
     width: 70%;
-    height: 150px;
-    background-color: #240595;
+    height: 170px;
+    background-color: #093a7f;
+    position: relative;
+    bottom: 0px;
 }
 
 .image{
     float: right;
-    transform: translate(0px, -250px);
+    transform: translate(0px, -200px);
 }
